syntax = "proto3";

option csharp_namespace = "OrderService";

package OrderingApi;

service Order {
	rpc CreateOrder (CreateOrderRequest) returns (OrderResultResponse);

	rpc UpdateOrder (UpdateOrderRequest) returns (OrderResultResponse);
}

message CreateOrderRequest {
	string buyerId = 1;
	repeated ItemDetail items = 2;
}

message UpdateOrderRequest {
	int32 orderId = 1;
	repeated ItemDetail items = 2;
}


message OrderResultResponse {
	int32 orderId = 1;
}

message ItemDetail {
	int32 id = 1;
    int32 productId = 2;
    string productName = 3;
    double unitPrice = 4;
    int32 quantity = 5;
}